--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,83 @@
 {
-  "background_color": "#ffffff",
-  "description": "You are Reading Demon Slayer Manga Online Fully Coloured, Download Latest Anime Episodes And Movies For Free In High Quality Format, only at Kimetsu 360",
+  "id": "/",
   "dir": "ltr",
-  "display": "fullscreen",
-  "name": "Kimetsu 360",
-  "orientation": "any",
-  "scope": "/",
-  "short_name": "Kimetsu 360",
-  "start_url": "/index.html",
-  "theme_color": "#ffffff",
-  "icons": [
-    {
-      "src": "img/logo.webp"
-    },
-    {
-      "src": "img/background-1.webp"
-    }
-  ],
-  "id": "Kimetsu ",
   "lang": "en",
+  "name": "Kimetsu 360",
+  "scope": "/",
+  "display": "fullscreen",
+  "start_url": "/",
+  "short_name": "Kimetsu 360",
+  "theme_color": "#FFFFFF",
+  "description": "You are Reading Demon Slayer Manga Online Fully Coloured, Download Latest Anime Episodes And Movies For Free In High Quality Format, only at Kimetsu 360",
+  "orientation": "any",
+  "background_color": "#FFFFFF",
+  "related_applications": [],
+  "prefer_related_applications": false,
   "display_override": [
     "window-controls-overlay"
   ],
+  "screenshots": [
+    {
+      "src": "assets/screen.png"
+    },
+    {
+      "src": "assets/screen.png"
+    },
+    {
+      "src": "assets/screen.png"
+    }
+  ],
+  "features": [
+    "Cross Platform",
+    "low-latency inking",
+    "fast",
+    "useful AI"
+  ],
+  "icons": [
+    {
+      "src": "/icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
   "categories": [
     "entertainment"
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
+  "edge_side_panel": {},
+  "shortcuts": [
+    {
+      "name": "Start Live Session",
+      "short_name": "Start Live",
+      "description": "Jump direction into starting or joining a live session",
+      "url": "/?startLive",
+      "icons": [
+        {
+          "src": "/assets/icon/256.png",
+          "sizes": "256x256"
+        }
+      ]
+    }
   ]
 }
